--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -115,8 +115,8 @@ PC. This takes the backends in the other direction - enabling pluggable support
 for a range of large database programs (including sqlite) to provide a single
 connection for all registered QOF objects to whichever programs are available
 to libgda. The current sql-parser code in QOF was originally copied from
-libgda and v0.6.0 can use external libgda to parse SQL where available. libgda
-will remain optional (to make QOF easier for embedded systems).
+libgda and libqof1 &gt;=0.6.0 can use external libgda to parse SQL where available. 
+libgda will remain optional (to make QOF easier for embedded systems).
 </li></ul>
 <p>These new backends are likely to become optional packages so that QOF can be
 installed with any of the backends - as long as it has at least one.</p>
@@ -245,8 +245,8 @@ href="http://prdownloads.sourceforge.net/qof/qof-0.6.1.tar.gz?download"
 >SourceForge</a>.</li>
 <li>Also <a href="http://freshmeat.net/projects/qof/">Freshmeat</a>.</li>
 <li>Debian packages are available in 
-<a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a> (0.6.1) 
-and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a> (0.6.0). 
+<a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a> (0.6.1-1) 
+and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a> (0.6.0-2). 
 There are also <b>test packages</b> available using a trivial apt repository.
 (the / at the end of the URL is important.)<br/>
 <code>deb http://www.linux.codehelp.co.uk/ packages/<br/>
@@ -281,7 +281,7 @@ gpe-expenses</a> for embedded devices like iPAQs.</li>
 </div>
 <hr>
 <div><p>Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004<br/>
-Updated by Neil Williams &lt;linux@codehelp.co.uk&gt; October 2005.</p></div>
+Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; January 2006.</p></div>
 <hr>
 <div><a href="http://sourceforge.net">
 <img src="http://sourceforge.net/sflogo.php?group_id=83302&amp;type=5"
@@ -289,7 +289,7 @@ id="sflogo" alt="SourceForge Logo"></a></div>
 <div id="licence">
 <p>The copyright licensing notice below applies to this text.</p>
 <p>Copyright &copy; 2004 Linas Vepstas</p>
-<p>Copyright &copy; 2005 Neil Williams</p>
+<p>Copyright &copy; 2005-2006 Neil Williams</p>
 <p>Permission is granted to copy, distribute, and/or modify this document under
 the terms of the GNU Free Documentation License, Version 1.1 or any later
 version published by the Free Software Foundation; with no Invariant Sections, 
