--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -242,13 +242,13 @@ storage backend.</p>
 <h2 id="download">Downloads</h2>
 <div>
 <ul>
-<li>The source code release for v0.6.1 is available from <a title="qof-0.6.1.tar.gz"
-href="http://prdownloads.sourceforge.net/qof/qof-0.6.1.tar.gz?download"
+<li>The source code release for v0.6.2 is available from <a title="qof-0.6.2.tar.gz"
+href="http://prdownloads.sourceforge.net/qof/qof-0.6.2.tar.gz?download"
 >SourceForge</a>.</li>
 <li>Also <a href="http://freshmeat.net/projects/qof/">Freshmeat</a>.</li>
 <li><b>Debian</b> packages are available in 
 <a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a> (0.6.1-1) 
-and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a> (0.6.0-2).
+and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a> (0.6.1-1).
 <ul><li>
 There are <b>test packages</b> available using a trivial apt repository.
 (the / at the end of the URL is important.)<br/>
@@ -260,7 +260,7 @@ these are only tests - demos if you will.</li></ul></li>
 <a href="http://packages.ubuntu.com/dapper/libs/libqof1">Ubuntu Universe</a>.</li>
 <li>There is a sample .spec file available in QOF CVS, available 
 via <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.</li>
-<li>RPM packages have been prepared for 
+<li>RPM packages have been prepared for v0.6.1 in
 <a href="http://rpmfind.net/linux/RPM/fedora/extras/4/i386/qof-0.6.1-1.fc4.i386.html">
 Fedora 4 Extras</a> and 
 <a href="http://rpmfind.net/linux/RPM/fedora/devel/i386/qof-0.6.1-1.fc5.i386.html">
