--- a/qof/website/hacking.html
+++ b/qof/website/hacking.html
@@ -33,7 +33,7 @@ title="Query Object Framework">QOF</acronym></h1>
 symbol of the same name"></div>
 
 <h2>Advice for packagers / maintainers</h2>
-<h3>Updated December 2005 for QOF 0.6.1</h3>
+<h3>Updated March 2006 for QOF 0.6.3</h3>
 
 <ul>
 <li>Building against QOF
@@ -239,6 +239,7 @@ SQL directly in the future.</p>
 </div>
 <hr>
 <div><p>Written by Neil Williams &lt;linux@codehelp.co.uk&gt; December 2005.
+</p><p>Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; March 2006.
 </p></div>
 <hr>
 <div><a href="http://sourceforge.net">
@@ -246,7 +247,7 @@ SQL directly in the future.</p>
 id="sflogo" alt="SourceForge Logo"></a></div>
 <div id="licence">
 <p>The copyright licensing notice below applies to this text.</p>
-<p>Copyright &copy; 2005 Neil Williams</p>
+<p>Copyright &copy; 2005,2006 Neil Williams</p>
 <p>Permission is granted to copy, distribute, and/or modify this document under
 the terms of the GNU Free Documentation License, Version 1.1 or any later
 version published by the Free Software Foundation; with no Invariant Sections, 
