--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -242,13 +242,13 @@ storage backend.</p>
 <h2 id="download">Downloads</h2>
 <div>
 <ul>
-<li>The source code release for v0.6.2 is available from <a title="qof-0.6.2.tar.gz"
-href="http://prdownloads.sourceforge.net/qof/qof-0.6.2.tar.gz?download"
+<li>The source code release for v0.6.3 is available from <a title="qof-0.6.3.tar.gz"
+href="http://prdownloads.sourceforge.net/qof/qof-0.6.3.tar.gz?download"
 >SourceForge</a>.</li>
 <li>Also <a href="http://freshmeat.net/projects/qof/">Freshmeat</a>.</li>
 <li><b>Debian</b> packages are available in 
-<a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a> (0.6.1-1) 
-and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a> (0.6.1-1).
+<a href="http://packages.debian.org/unstable/libs/libqof1">unstable</a>
+and <a href="http://packages.debian.org/testing/libs/libqof1">testing</a>.
 <ul><li>
 There are <b>test packages</b> available using a trivial apt repository.
 (the / at the end of the URL is important.)<br/>
@@ -256,8 +256,9 @@ There are <b>test packages</b> available using a trivial apt repository.
 deb-src http://www.linux.codehelp.co.uk/ packages/</code><br/>
 Please note that these are not the usual quality-assured Debian packages,
 these are only tests - demos if you will.</li></ul></li>
-<li>QOF 0.6.1 is in 
-<a href="http://packages.ubuntu.com/dapper/libs/libqof1">Ubuntu Universe</a>.</li>
+<li>QOF is in 
+<a href="http://packages.ubuntu.com/dapper/libs/libqof1">Ubuntu Universe</a>
+usually at the same version as Debian testing.</li>
 <li>There is a sample .spec file available in QOF CVS, available 
 via <a href="http://cvs.sourceforge.net/viewcvs.py/qof/qof/rpm/">SourceForge</a>.</li>
 <li>RPM packages have been prepared for v0.6.1 in
@@ -294,7 +295,7 @@ gpe-expenses</a> for embedded devices like iPAQs.</li>
 </div>
 <hr>
 <div><p>Written by Linas Vepstas &lt;linas@linas.org&gt; April 2004<br/>
-Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; January 2006.</p></div>
+Last updated by Neil Williams &lt;linux@codehelp.co.uk&gt; March 2006.</p></div>
 <hr>
 <div><a href="http://sourceforge.net">
 <img src="http://sourceforge.net/sflogo.php?group_id=83302&amp;type=5"
