--- a/qof/website/why-qof.html
+++ b/qof/website/why-qof.html
@@ -2,8 +2,9 @@
 <html lang="en_gb">
 <head>
 <link rel="stylesheet" type="text/css" href="qof.css">
+<link rel="shortcut icon" href="favicon.png">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Why Qof?</title>
+<title>Why QOF?</title>
 </head>
 <body>
 <h1 id="top">Why QOF?</h1>
@@ -409,12 +410,12 @@ date back to 1997 and thus the parallel evolution is in part because GObjects
 didn't exist back then. Maybe there might be some convergence, maybe,
 someday.</p>
 </div>
-<li><p>Why not UML?  What's UML got to do with it?
-    </p>
-     <br>
-<li><p>Why not XUL?  What's XUL got to do with it?
-    </p>
-     <br>
+<li><p>Why not UML? What's UML got to do with it?
+ </p>
+ <br>
+<li><p>Why not XUL? What's XUL got to do with it?
+ </p>
+ <br>
 </ul>
 </div>
 <div><span class="back"><a href="#top">Top</a></span></div>
@@ -424,14 +425,14 @@ someday.</p>
 <div>See also:
 <ul>
 <li><a href="http://ometer.com/desktop-language.html">Java, Mono, or
-    C++?  Thoughts on the future of open source desktop development</a>
-    by Havoc Pennington.
+ C++? Thoughts on the future of open source desktop development</a>
+ by Havoc Pennington.
 <li><a href="http://www.gnome.org/~seth/storage/">Gnome Storage</a>
-    is a project that looks at the query problem for desktop 
-    applications.
+ is a project that looks at the query problem for desktop
+ applications.
 <li><a href="http://www.linas.org/theory/eternity.html">The Next
-    Few Decades of Computing</a> takes a similarly broad view of
-    programming interfaces. 
+ Few Decades of Computing</a> takes a similarly broad view of
+ programming interfaces.
 </ul>
 
 </div>
@@ -442,15 +443,18 @@ someday.</p>
 </p>
 </div>
 <hr>
+<div><a href="http://sourceforge.net/projects/qof/">
+<img src="sflogolg.png" id="sflogo" alt="SourceForge Logo"></a></div>
 <div id="licence">
 <p>The copyright licensing notice below applies to this text.</p>
 <p>Copyright &copy; 2003,2004 Linas Vepstas</p>
-<p>Copyright &copy; 2005 Neil Williams</p>
+<p>Copyright &copy; 2005, 2006 Neil Williams</p>
 <p>Permission is granted to copy, distribute, and/or modify this document under
-the terms of the GNU Free Documentation License, Version 1.1 or any later
+the terms of the GNU Free Documentation License, Version 1.2 or any later
 version published by the Free Software Foundation; with no Invariant Sections,
-with no Front-Cover Texts, and with no Back-Cover Texts. A copy of this license
-is included in the file <a href="copying.txt">copying.txt</a></p>
+with no Front-Cover Texts, and with no Back-Cover Texts. 
+In installed versions, the licence can be found in the 
+<a href="../copyright">copyright</a> file.</p>
 </div>
 </body>
 </html>
