--- a/qof/website/index.html
+++ b/qof/website/index.html
@@ -234,18 +234,20 @@ is provided in QOF CVS via
 <hr>
 <h2 id="status">Project Status</h2>
 <div>
-<p>This code is in active, daily use in <a href="http://www.gnucash.org">GnuCash</a>
-and <a href="http://pilot-qof.sourceforge.net/">pilot-qof</a>. It is
-'stable' code. See the <a href="hacking.html#roadmap">roadmap</a> for
+<p>This code is in active, daily use in several projects
+and is 'stable' code. See the 
+<a href="hacking.html#roadmap">roadmap</a> for
 the current development direction.</p>
-<p>The other projects currently using QOF are:</p>
+<p>Some projects currently using QOF are:</p>
 <ul>
 <li><a href="http://gttr.sourceforge.net">GnoTime</a> (Gnome Time Tracker).</li>
-<li><a href="http://pilot-qof.sourceforge.net/">pilot-qof</a> (Query Palm databases).</li>
+<li><a href="http://www.gnucash.org">GnuCash</a> - modified source.</li>
+<li><a href="http://pilot-qof.sourceforge.net/">pilot-qof</a> 
+(Query Palm databases).</li>
 <li><a href="http://dwi.sourceforge.net/">DWI</a> (Data With Interaction).</li>
-<li><a href="http://www.linux.codehelp.co.uk/cashutil/">CashUtil</a>
+<li><a href="http://cashutil.sourceforge.net/">CashUtil</a>
 (the gnucash command line interface).</li>
-<li><a href="http://linux.codehelp.co.uk/embedded.html#gpeexpenses">
+<li><a href="http://gpe-expenses.sourceforge.net/">
 gpe-expenses</a> for embedded devices like iPAQs.</li>
 </ul>
 </div>
